@@ -139,7 +139,27 @@ bool MetaEngine::load(const QString& filePath)
         qCCritical(DIGIKAM_METAENGINE_LOG) << "Default exception from Exiv2";
     }
 
+    if (loadFromSidecarAndMerge(filePath))
+    {
+        hasLoaded = true;
+    }
+
+    return hasLoaded;
+}
+
+bool MetaEngine::loadFromSidecarAndMerge(const QString& filePath)
+{
+    if (filePath.isEmpty())
+    {
+        return false;
+    }
+
+    d->filePath      = filePath;
+    bool hasLoaded   = false;
+
 #ifdef _XMP_SUPPORT_
+    QMutexLocker lock(&s_metaEngineMutex);
+
     try
     {
         if (d->useXMPSidecar4Reading)
